fetch requst logic  for all list of students is done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="fetch_favorites">Favorites</button>
         </div>
         <div>
-            <table>
+            <table id="student_data">
                 <thead>
                     <tr class="category-list">
                         <td>Name</td>
@@ -29,16 +29,7 @@
                         <td>Title</td>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr id="student_data">
-                        <th>joe</th>
-                        <th>may19</th>
-                        <th>tent</th>
-                        <th>unknown</th>
-                        <th>bloody</th>
-                        <th>brave</th>
-                    </tr>
-                </tbody>
+               
             </table>
         </div>
     </main>
